# ft_irc

./: .gitignore  CMakeLists.txt  Makefile  README.md  make.sh  manager.sh  program
.github/workflows/: mac.yml  ubuntu.yml
app/: mock_client.cpp
apps/: CMakeLists.txt  irc_client.cpp  irc_server.cpp  mock_client.cpp  server.cpp
client/: client.hpp
client_for_testing/: .client.c.swp  a.out
server/: server.hpp
src/: main.cpp
src/channel/: channel.cpp  channel.hpp
src/client/: client.cpp  client.hpp  ostream_client.cpp  ostream_client.hpp
src/cmd_parser/: cmd_parser.cpp  cmd_parser.hpp
src/commands/: commands.cpp  commands.hpp  join.cpp  mode.cpp  nick.cpp  pong.cpp  priv_msg.cpp  unknown.cpp  user.cpp  who_is.cpp
src/irc_client/: irc_client.cpp  irc_client.hpp  ostream_irc_client.cpp  ostream_irc_client.hpp
src/irc_server/: irc_server.cpp  irc_server.hpp  ostream_irc_server.cpp  ostream_irc_server.hpp
src/message/: message.cpp  message.hpp
src/mock_client/: mock_client.cpp  mock_client.hpp
src/mock_server/: mock_server.cpp  mock_server.hpp
src/parser/: parcer.hpp  parser.cpp  parser.hpp
src/server/: ostream_server.cpp  ostream_server.hpp  server.cpp  server.hpp  server_utils.cpp  server_utils.hpp
src/socket/: socket.cpp  socket.hpp
src/tcp_connection/: tcp_connection.cpp  tcp_connection.hpp  tcp_exceptions.cpp  tcp_exceptions.hpp  tcp_utils.cpp  tcp_utils.hpp
src/user/: user.cpp  user.hpp
src/utils/: colors.h  output_utils.cpp  output_utils.hpp
tests/: CMakeLists.txt
tests/mock_client/: client.c
tests/src/: client.cpp  client_server_communication.cpp  cmd_parser.cpp  irc_client.cpp  irc_server.cpp  parser.cpp  test.cpp
